--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "App Scaffold",
+    "name": "laravel/laravel",
     "type": "project",
     "description": "Basic scaffolding for kick start an application. it includes login, registratin, reset password, email verification, roles, permisions etc.",
     "keywords": ["framework", "laravel"],
@@ -15,6 +15,7 @@
     "require-dev": {
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
+        "laravel/breeze": "^1.4",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^5.10",
